--- a/.github/workflows/actionPractice.yml
+++ b/.github/workflows/actionPractice.yml
@@ -9,6 +9,12 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Output a message
+        run: echo "Action Complete!"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
